arquitectura component product

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,15 +1,18 @@
 <div class="card">
     <div class="card-header">
-        <h1>Title</h1>
+        <h1 class="card-title">Header</h1>
+        <img class="card-img-top" src="" alt="">
     </div>
+    
         <div class="card-body">
-            <h2 class="text-primary">12 products disponibles</h2>
-            <p>Description</p>
+            <h2 class="card-title">Title</h2>
+            <h3 class="card-subtitle text-primary">12 products disponibles</h3>
+            <p class="card-text">Description</p>
         </div>
 
     <div class="card-body">
-        <h1 class="text-success">FinalPrice <span class="text-primary">-20%</span></h1>
-        <h2 class="text-danger text-decoration-line-through">Original Pirce</h2>
+        <h1 class="card-title text-success">FinalPrice <span class="text-primary">-20%</span></h1>
+        <h2 class="card-subtitle text-danger text-decoration-line-through">Original Pirce</h2>
     </div>
     <div class="card-footer ">sada</div>
 </div>
