--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -9,7 +9,9 @@
 
     <div class="card-body">
         <h1 class="text-success">FinalPrice <span class="text-primary">-20%</span></h1>
-        <h2 class="text-danger text-decoration-line-through">Original Pirce</h2>
+        <h2 class="text-danger text-decoration-line-through">Original Price</h2>
     </div>
-    <div class="card-footer ">sada</div>
+    <div class="card-footer d-grid gap-2">
+        <button class="btn btn-outline-success">Add Cart</button>
+    </div>
 </div>
