--- a/src/app/productops/productops.component.html
+++ b/src/app/productops/productops.component.html
@@ -16,8 +16,8 @@
 <!-- grid porductos -->
     <div class="my-5" *ngIf="view=='grid'">
         <div class="row">
-            <div class="col-3" *ngFor="let item of [1,1,1,1,1,1,1,1]">
-                <app-product class="mx-3"></app-product>
+            <div class="col-3" *ngFor="let item of [1,1,1,1,1,1,1]">
+                <app-product class="mx-3 my-3"></app-product>
             </div>
         </div>
     </div>
@@ -25,7 +25,7 @@
 <!-- lista porductos -->
     <div *ngIf="view=='list'">
         <div class="d-flex justify-content-center my-5" *ngFor="let item of [1,1,1,1]">
-            <app-product [view]="'list'"></app-product>
+            <app-product [view]="'list'" class="mx-5"></app-product>
         </div>
     </div>
 </div>
