--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="mt-5"></div>
-<app-productops></app-productops>
+<app-product-details></app-product-details>
+<!-- <app-productops></app-productops> -->
 <!-- <app-home></app-home> -->
