component-cart listo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="mt-5"></div>
-<app-product-details></app-product-details>
+<app-cart></app-cart>  
+<!-- <app-product-details></app-product-details> -->
 <!-- <app-productops></app-productops> -->
 <!-- <app-home></app-home> -->
