--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,4 @@
+<!-- vista-grid -->
 <div class="grid-view" *ngIf="view=='grid'">
     <div class="card">
         <div class="card-header text-center">
@@ -22,6 +23,7 @@
         </div>
     </div>
 </div>
+<!-- vista-list -->
 <div class="list-view" *ngIf="view=='list'">
     <div class="card d-flex flex-column">
         <div class="row">
@@ -47,7 +49,41 @@
                 </div>
             </div>
         </div>
-    </div>
-        
+    </div>       
 </div>
+<!-- vista-cartitems -->
+<div class="cartitem-view" *ngIf="view=='cartitem'">
+    <div class="card d-flex flex-column">
+        <div class="row">
+            <div class="col-md-4 overflow-hidden d-flex justify-content-center align-items-center">
+                <img class="img-fluid rounded-start" src="../../assets/images/celulares/1.webp" alt="">   
+            </div>
+            <div class="col">
+                <div class="card-body">
+                    <h3 class="card-title">Title</h3>
+                    <h4 class="text-success">FinalPrice <span class="text-primary">-20%</span></h4>
+                    <h4 class="text-danger text-decoration-line-through">Original Price</h4>
+                    <h5 class="card-subtitle text-primary">12 products disponibles</h5>
+                </div>
+                <div class="card-footer text-center d-grid gap-2">
+                    <button class="btn btn-outline-danger">Remove from Cart</button>
+                </div>
+            </div>
+        </div>
+    </div>       
+</div>
+<!-- vista-prevcartitems -->
+<div class="cartitem-view" *ngIf="view=='prevcartitem'">
+    <div class="card">
+        <div class="row d-flex justify-content-center">
+            <div class="row col-md-8 overflow-hidden justify-content-center align-items-center">
+                <img class="img-fluid rounded-start" src="../../assets/images/celulares/1.webp" alt="">   
+            </div>
+            <div class="row">
+                <h3 class="card-title text-center">Title</h3>
+            </div>
+        </div>
+    </div>       
+</div>
+
 
