--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="mt-5"></div>
-<app-order></app-order>
+<app-header></app-header>
+<!-- <app-order></app-order> -->
 <!-- <app-cart></app-cart>   -->
 <!-- <app-product-details></app-product-details> -->
 <!-- <app-productops></app-productops> -->
