--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,12 @@
-<p>footer works!</p>
+<footer class="shadow-lg border border-2 border-dark d-flex justify-content-between align-items-center px-5 pt-3 bg-gradient">
+    <div class="">
+        <p>Hecho por: <span class="fw-bold">KaloxDev's</span></p>
+    </div>
+    <div class="">
+        <p>Creado en: <span class="text-success fw-bold">May 2023</span></p>
+    </div>
+    <div class="">
+        <p>&copy;<span class="fw-bold"> Copyright: 2023</span></p>
+    </div>
+    
+</footer>
