--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="shadow-lg border border-2 border-dark d-flex justify-content-between align-items-center px-5 pt-3 bg-gradient">
+<footer class="h-100 w-100 shadow-lg border border-2 border-dark d-flex justify-content-between align-items-center px-5 pt-3 bg-gradient">
     <div class="">
         <p>Hecho por: <span class="fw-bold">KaloxDev's</span></p>
     </div>
