--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -5,7 +5,7 @@
             <h1 class="card-title">Header</h1>
         </div>
         <div>
-            <img class="card-img-top" src="../../assets/images/celulares/1.webp" alt="">   
+            <img class="card-img-top" src="../../assets/images/celulares/1.webp" alt="" appHeaderProductDetails [prodid]="1">   
         </div>
         
         <div class="card-body text-center">
@@ -28,7 +28,7 @@
     <div class="card d-flex flex-column">
         <div class="row">
             <div class="col-md-4 overflow-hidden d-flex justify-content-center align-items-center">
-                <img class="img-fluid rounded-start" src="../../assets/images/celulares/1.webp" alt="">   
+                <img class="img-fluid rounded-start" src="../../assets/images/celulares/1.webp" alt="" appHeaderProductDetails [prodid]="1">   
             </div>
             <div class="col">
                 <div class="card-header text-center">
@@ -56,7 +56,7 @@
     <div class="card d-flex flex-column">
         <div class="row">
             <div class="col-md-4 overflow-hidden d-flex justify-content-center align-items-center">
-                <img class="img-fluid rounded-start" src="../../assets/images/celulares/1.webp" alt="">   
+                <img class="img-fluid rounded-start" src="../../assets/images/celulares/1.webp" alt="" appHeaderProductDetails [prodid]="1">   
             </div>
             <div class="col">
                 <div class="card-body">
@@ -77,7 +77,7 @@
     <div class="card">
         <div class="row d-flex justify-content-center">
             <div class="row col-md-8 overflow-hidden justify-content-center align-items-center">
-                <img class="img-fluid rounded-start" src="../../assets/images/celulares/1.webp" alt="">   
+                <img class="img-fluid rounded-start" src="../../assets/images/celulares/1.webp" alt="" appHeaderProductDetails [prodid]="1">   
             </div>
             <div class="row">
                 <h3 class="card-title text-center">Title</h3>
