--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -45,12 +45,12 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body" #container>
-          
+            
         </div>
-        <div class="modal-footer">
+        <!-- <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
           <button type="button" class="btn btn-primary">Comprendido</button>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
