--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,92 @@
-<p>register works!</p>
+
+<form [formGroup]="registerForm" class="px-3">
+    <div class="row">
+        <div class="col">
+            <label for="name" class="form-label">Nombres</label>
+            <input type="text" class="form-control" id="name" formControlName="name">
+
+            <!-- Error va jalar los gets del typescript--> 
+            <div class="form-text text-danger" *ngIf="name.errors?.['required'] &&(name.dirty || name.touched)">
+                Error No se introdujeron datos
+            </div>
+            <div class="form-text text-danger" *ngIf="name.errors?.['minLength'] &&(name.dirty || name.touched)">
+                Error No se introdujeron los datos minimos
+            </div>
+            <div class="form-text text-danger" *ngIf="name.errors?.['pattern'] &&(name.dirty || name.touched)">
+                No se pueden introducir numeros
+            </div>
+
+        </div>
+        <div class="col">
+            <label for="lastname" class="form-label">Apellidos</label>
+
+            <input type="text" class="form-control" id="lastname" formControlName="lastname">
+             <!-- Error va jalar los gets del typescript--> 
+             <div class="form-text text-danger" *ngIf="lastname.errors?.['required'] &&(lastname.dirty || lastname.touched)">
+                Error No se introdujeron datos
+            </div>
+            <div class="form-text text-danger" *ngIf="lastname.errors?.['minLength'] &&(lastname.dirty || lastname.touched)">
+                Error No se introdujeron los datos minimos
+            </div>
+            <div class="form-text text-danger" *ngIf="lastname.errors?.['pattern'] &&(lastname.dirty || lastname.touched)">
+                No se pueden introducir numeros
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" formControlName="email">
+
+             <!-- Error va jalar los gets del typescript--> 
+             <div class="form-text text-danger" *ngIf="email.errors?.['required'] &&(email.dirty || email.touched)">
+                Error No se introdujeron datos
+            </div>
+            <div class="form-text text-danger" *ngIf="email.errors?.['email'] &&(email.dirty || email.touched)">
+                Error No se introdujo un email valido
+            </div>
+            <div class="form-text text-danger" *ngIf="email.errors?.['maxLength'] &&(email.dirty || email.touched)">
+                No se puede superara la cantidad maxima de caracteres
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <label for="pwd" class="form-label">Password</label>
+            <input type="password" class="form-control" id="pwd" formControlName="pwd">
+
+             <!-- Error va jalar los gets del typescript--> 
+             <div class="form-text text-danger" *ngIf="pwd.errors?.['required'] &&(pwd.dirty || pwd.touched)">
+                Error No se introdujeron datos
+            </div>
+            <div class="form-text text-danger" *ngIf="pwd.errors?.['minLength'] &&(pwd.dirty || pwd.touched)">
+                Error No se introdujeron los datos minimos
+            </div>
+            <div class="form-text text-danger" *ngIf="pwd.errors?.['maxLength'] &&(pwd.dirty || pwd.touched)">
+                No se puede superara la cantidad maxima de caracteres
+            </div>
+        </div>
+        <div class="col">
+            <label for="rpwd" class="form-label">Repeat Password</label>
+            <input type="password" class="form-control" id="rpwd" formControlName="rpwd">
+
+             <!-- Error va jalar los gets del typescript--> 
+             <div class="form-text text-danger" *ngIf="rpwd.errors?.['required'] &&(rpwd.dirty || rpwd.touched)">
+                Error No se introdujeron datos
+            </div>
+            <div class="form-text text-danger" *ngIf="rpwd.errors?.['minLength'] &&(rpwd.dirty || rpwd.touched)">
+                Error No se introdujeron los datos minimos
+            </div>
+            <div class="form-text text-danger" *ngIf="rpwd.errors?.['maxLength'] &&(rpwd.dirty || rpwd.touched)">
+                No se puede superara la cantidad maxima de caracteres
+            </div>
+        </div>
+    </div>
+    <div class="row my-3 mx-auto">
+        <button class="d-block mx-auto btn btn-outline-primary" type="submit">Crear Cuenta</button>
+    </div>
+    <div class="row text-center mb-3">
+        <span class="text-success fs-5">Cuenta creda!!</span>
+    </div>
+</form>
+
