--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -5,19 +5,18 @@
             <h1 class="card-title">Header</h1>
         </div>
         <div>
-            <img class="card-img-top" src="../../assets/images/celulares/1.webp" alt="" appHeaderProductDetails [prodid]="1">   
+            <img class="card-img-top" src="../../assets/images/{{product.productCategory.subCategory}}/{{product.id}}.webp" alt="" appHeaderProductDetails [prodid]="product.id">   
         </div>
         
         <div class="card-body text-center">
-            <h2 class="card-title">Title</h2>
-            <h3 class="card-subtitle text-primary">12 products disponibles</h3>
-            <p class="card-text">Description</p>
+            <h3 class="card-title">{{product.title}}</h3>
+            <h3 class="card-subtitle text-primary">{{product.quantity}} products disponibles</h3>
+            <p class="card-text">{{product.description}}</p>
+
+            <h1 class="text-success">{{utilityService.calcularFinalPrice(product.price, product.offer.discount)}} <span class="text-primary">-{{product.offer.discount}}%</span></h1>
+            <h2 class="text-danger text-decoration-line-through">S/.{{product.price}}</h2>
         </div>
     
-        <div class="card-body text-center">
-            <h1 class="text-success">FinalPrice <span class="text-primary">-20%</span></h1>
-            <h2 class="text-danger text-decoration-line-through">Original Price</h2>
-        </div>
         <div class="card-footer text-center d-grid gap-2">
             <button class="btn btn-outline-success">Add Cart</button>
         </div>
@@ -35,14 +34,14 @@
                     <h1 class="card-title">Header</h1>
                 </div>
                 <div class="card-body">
-                    <h2 class="card-title">Title</h2>
-                    <h3 class="card-subtitle text-primary">12 products disponibles</h3>
-                    <p class="card-text">Description</p>
+                    <h2 class="card-title">{{product.title}}</h2>
+                    <h3 class="card-subtitle text-primary">{{product.quantity}} products disponibles</h3>
+                    <p class="card-text">{{product.description}}</p>
                 </div>
             
                 <div class="card-body">
-                    <h1 class="text-success">FinalPrice <span class="text-primary">-20%</span></h1>
-                    <h2 class="text-danger text-decoration-line-through">Original Price</h2>
+                    <h1 class="text-success">FinalPrice <span class="text-primary">-{{product.offer.discount}}%</span></h1>
+                    <h2 class="text-danger text-decoration-line-through">{{product.price}}</h2>
                 </div>
                 <div class="card-footer text-center d-grid gap-2">
                     <button class="btn btn-outline-success">Add Cart</button>
@@ -60,10 +59,10 @@
             </div>
             <div class="col">
                 <div class="card-body">
-                    <h3 class="card-title">Title</h3>
-                    <h4 class="text-success">FinalPrice <span class="text-primary">-20%</span></h4>
-                    <h4 class="text-danger text-decoration-line-through">Original Price</h4>
-                    <h5 class="card-subtitle text-primary">12 products disponibles</h5>
+                    <h3 class="card-title">{{product.title}}</h3>
+                    <h4 class="text-success">FinalPrice <span class="text-primary">-{{product.offer.discount}}%</span></h4>
+                    <h4 class="text-danger text-decoration-line-through">{{product.price}}</h4>
+                    <h5 class="card-subtitle text-primary">{{product.quantity}} products disponibles</h5>
                 </div>
                 <div class="card-footer text-center d-grid gap-2">
                     <button class="btn btn-outline-danger">Remove from Cart</button>
