--- a/src/app/lista-products/lista-products.component.html
+++ b/src/app/lista-products/lista-products.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid d-flex justify-content-around align-items-center">
     <!-- cantidad de productos que se muestra este caso 1 1 1 son 3 -->
+    <!-- esto muestra el home -->
     <app-product class="w-25 mb-5" *ngFor="let product of products" [product]="product"></app-product>   
 </div>
