--- a/src/app/productops/productops.component.html
+++ b/src/app/productops/productops.component.html
@@ -16,16 +16,17 @@
 <!-- grid porductos -->
     <div class="my-5" *ngIf="view=='grid'">
         <div class="row">
-            <div class="col-3" *ngFor="let item of [1,1,1,1,1,1,1]">
-                <app-product class="mx-3 my-3"></app-product>
+            <div class="col-3" *ngFor="let product of products">
+                <!-- [product]="product" se esta enviando al Input de product.component -->
+                <app-product [view]="'grid'" [product]="product" class="mx-3 my-3"></app-product>
             </div>
         </div>
     </div>
 
 <!-- lista porductos -->
     <div *ngIf="view=='list'">
-        <div class="d-flex justify-content-center my-5" *ngFor="let item of [1,1,1,1]">
-            <app-product [view]="'list'" class="mx-5"></app-product>
+        <div class="d-flex justify-content-center my-5" *ngFor="let product of products">
+            <app-product [view]="'list'" [product]="product" class="mx-5"></app-product>
         </div>
     </div>
 </div>
