--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -68,7 +68,7 @@
     <div class="row">
         <div class="col">
             <label for="mobile" class="form-label">Celular</label>
-            <input type="number" class="form-control" id="mobile" formControlName="mobile">
+            <input type="text" class="form-control" id="mobile" formControlName="mobile">
 
              <!-- Error va jalar los gets del typescript--> 
              <div class="form-text text-danger" *ngIf="mobile.errors?.['required'] &&(mobile.dirty || mobile.touched)">
