--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,7 +29,7 @@
                 <li class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modalform" (click)="mostrarModal('login')">Login</li>
                 <li class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modalform" (click)="mostrarModal('register')">Register</li>
                 <li class="btn btn-outline-light" *ngIf="serviceUtility.estaLogeado()">Cuenta</li>
-                <li class="btn btn-outline-light" routerLink="/cart" *ngIf="serviceUtility.estaLogeado()" >Carrito</li>
+                <li class="btn btn-outline-light" routerLink="/cart" *ngIf="serviceUtility.estaLogeado()">Carrito <span class="bg-warning px-1 rounded text-dark">{{nroItem}}</span></li>
                 <li class="btn btn-outline-light" routerLink="/orders" *ngIf="serviceUtility.estaLogeado()">Orders</li>
                 <li class="btn btn-outline-light" (click)="serviceUtility.removeUser()" *ngIf="serviceUtility.estaLogeado()">Salir</li>
             </ul>
